Another overflow fix for the ladder..

--- a/src/views/Ladder/Ladder.styl
+++ b/src/views/Ladder/Ladder.styl
@@ -97,7 +97,6 @@
 
             > .Player {
                 display: inline-block;
-                width: 10rem;
                 overflow: hidden;
             }
 
